--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,8 +7,10 @@
             </div>
             <div class="w-full md:w-1/2 py-10 px-5 md:px-10">
                 <div class="text-center mb-10">
-                    <h1 class="font-bold text-3xl text-gray-900">Login</h1>
-                    <p>Ingrese su información</p>
+                    <h6 class="text-2xl text-gray-900 font-semibold ">Registro</h6>
+                    <p class="mt-2 mb-4 mr-2 ml-2 text-blueGray-500">
+                      Ingresa tu information
+                    </p>
                 </div>
                 <div>
                    
@@ -17,7 +19,7 @@
                             <label for="" class="text-xs font-semibold px-1">Correo</label>
                             <div class="flex">
                                 <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="mdi mdi-email-outline text-gray-400 text-lg"></i></div>
-                                <input type="email" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500" #email="ngModel" [(ngModel)]="usuario.email"  placeholder="sarahi@example.com">
+                                <input type="email" class="w-full -ml-10 pl-2 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500" #email="ngModel" [(ngModel)]="usuario.email"  placeholder="sarahi@example.com">
                             </div>
                         </div>
                     </div>
@@ -26,7 +28,7 @@
                             <label for="" class="text-xs font-semibold px-1">Contraseña</label>
                             <div class="flex">
                                 <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="mdi mdi-lock-outline text-gray-400 text-lg"></i></div>
-                                <input type="password" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500" #password="ngModel" name="password" [(ngModel)]="usuario.password" placeholder="************">
+                                <input type="password" class="w-full -ml-10 pl-2 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500" #password="ngModel" name="password" [(ngModel)]="usuario.password" placeholder="************">
                             </div>
                         </div>
                     </div>
