--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 
+<section>
+    <div class="min-w-screen min-h-screen bg-gray-900 flex justify-center px-3 py-3">
+        <div class="bg-gray-100 text-gray-500 rounded-3xl shadow-xl w-full overflow-hidden">
+            <app-nav></app-nav>
+            <router-outlet>
+            </router-outlet>
+        </div>
+    </div>
+</section>
 
-<router-outlet>
-</router-outlet>
