--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,30 +1,9 @@
 
 
-<div class="min-w-screen min-h-screen bg-gray-900 flex justify-center px-3 py-3">
-  <div class="bg-gray-100 text-gray-500 rounded-3xl shadow-xl w-full overflow-hidden" >
+
       <div class="w-full">
-          <div class="w-full py-5 px-5 md:px-10">
-            <nav id="header" class="w-full z-30 top-0 py-1">
-              <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-2 py-1">   
-                  <label for="menu-toggle" class="cursor-pointer md:hidden block">
-                      <svg class="fill-current text-gray-900" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                          <title>menu</title>
-                          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-                      </svg>
-                  </label>
-                  <input class="hidden" type="checkbox" id="menu-toggle" />
-        
-                  <div class="hidden md:flex md:items-center md:w-auto w-full order-3 md:order-1" id="menu">
-                      <nav>
-                          <ul class="md:flex items-center justify-between text-base text-gray-700 pt-4 md:pt-0">
-                              <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="#">Registrate</a></li>
-                              <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="#">Inicia Sesión</a></li>
-                          </ul>
-                      </nav>
-                  </div>
-              </div>
-          </nav>
-          </div>
+          
+        <section>
           <div class="carousel relative container mx-auto" style="max-width:1600px;">
             <div class="carousel-inner relative overflow-hidden w-full">
                 <!--Slide 1-->
@@ -90,23 +69,27 @@
       
             </div>
         </div>
+        </section>
 
+       <section>
         <div class="text-center mb-5">
           <h6 class="text-2xl font-semibold mt-6">Te encuentras en: Cancún</h6>
           <p class="mt-2 mb-4 mr-2 ml-2 text-blueGray-500">
             Write a few lines about each one. A paragraph describing a
             feature will be enough. Keep you user engaged!
           </p>
-          <button class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-full">
+         
+          <a  class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-full" [routerLink]="['/register']">
             Registrate
-          </button>
-        </div>        
+          </a>
+        </div>  
+       </section>      
 
+       <section>
         <agm-map [zoom]="11.5" [latitude]="lat" [longitude]="lng">
           <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
         </agm-map>
-        
-
+       </section>
         <section class="pb-10 bg-blueGray-200 -mt-24">
           <div class="container mx-auto px-4">
             <div class="flex flex-wrap">
@@ -151,9 +134,13 @@
                     </p>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
-  </div>
-</div>
+
+      
 
 
 
